# peace

./: .gitignore  .typos.toml  404.html  CHANGELOG.md  CNAME  Cargo.toml  DEVELOPMENT.md  LICENSE-MIT  MOTIVATION.md  README.md  about.hbs  about.toml  background.html  book.js  coverage.sh  deny.toml  examples.html  highlight.css  ideas.html  index.html  introduction.html  license.html  print.html  rustfmt.toml  searchindex.js  searchindex.json  side_projects.html  technical_concepts.html
crate/cfg/: Cargo.toml
crate/cfg/src/: accessors.rs  apply_check.rs  apply_op_spec.rs  clean_op_spec.rs  ensure_op_spec.rs  fn_ctx.rs  fn_spec.rs  full_spec.rs  full_spec_id.rs  full_spec_id_invalid_fmt.rs  item.rs  item_spec.rs  lib.rs  op_check_status.rs  op_ctx.rs  op_spec.rs  op_spec_dry.rs  progress_limit.rs  r_opt.rs  ref_into.rs  saved.rs  state.rs  state_diff_fn_spec.rs  state_discover_fn_spec.rs  step.rs  try_fn_spec.rs  w_opt.rs  work_spec.rs
crate/cli/: Cargo.toml
crate/cli/src/: lib.rs  output.rs
crate/cli_model/: Cargo.toml
crate/cli_model/src/: lib.rs  output_format.rs  output_format_parse_error.rs
crate/cmd/: Cargo.toml
crate/cmd/src/: cmd_independence.rs  cmd_scopes.rs  ctx.rs  lib.rs  scopes.rs
crate/cmd_ctx/: Cargo.toml
crate/cmd_ctx/src/: cmd_ctx_builder_support.rs  cmd_ctx_builder_support_multi.rs  cmd_ctx_mpnf.rs  cmd_ctx_mpnf_builder.rs  cmd_ctx_mpnf_params.rs  cmd_ctx_mpsf.rs  cmd_ctx_mpsf_builder.rs  cmd_ctx_mpsf_params.rs  cmd_ctx_npnf.rs  cmd_ctx_npnf_builder.rs  cmd_ctx_npnf_params.rs  cmd_ctx_spnf.rs  cmd_ctx_spnf_builder.rs  cmd_ctx_spnf_params.rs  cmd_ctx_spsf.rs  cmd_ctx_spsf_builder.rs  cmd_ctx_spsf_params.rs  cmd_ctx_types.rs  lib.rs  profile_filter_fn.rs  profile_selection.rs
crate/cmd_model/: Cargo.toml
crate/cmd_model/src/: cmd_block_desc.rs  cmd_block_outcome.rs  cmd_execution_error.rs  cmd_execution_id.rs  cmd_outcome.rs  item_stream_outcome.rs  lib.rs  step_stream_outcome.rs  stream_outcome_and_errors.rs  value_and_stream_outcome.rs
crate/cmd_rt/: Cargo.toml
crate/cmd_rt/src/: cmd_block.rs  cmd_execution.rs  item_stream_outcome_mapper.rs  lib.rs  progress.rs  step_stream_outcome_mapper.rs
crate/code_gen/: Cargo.toml
crate/code_gen/src/: cmd.rs  lib.rs
crate/core/: Cargo.toml
crate/core/src/: app_name.rs  apply_check.rs  flow_id.rs  item_id.rs  item_spec_id.rs  item_spec_id_invalid_fmt.rs  lib.rs  op_check_status.rs  profile.rs  profile_invalid_fmt.rs  progress.rs  progress_update.rs  step_id.rs
crate/data/: Cargo.toml
crate/data/src/: accessors.rs  data.rs  data_init.rs  lib.rs  marker.rs  r_maybe.rs  w_maybe.rs
crate/data_derive/: Cargo.toml
crate/data_derive/src/: lib.rs
crate/diff/: Cargo.toml
crate/diff/src/: changeable.rs  diff.rs  differ.rs  equality.rs  impls.rs  lib.rs  maybe_eq.rs  tracked.rs
crate/diff_derive/: Cargo.toml
crate/diff_derive/src/: lib.rs
crate/flow_model/: Cargo.toml
crate/flow_model/src/: flow_id.rs  flow_info.rs  flow_spec_info.rs  item_info.rs  item_spec_info.rs  lib.rs  step_info.rs  step_spec_info.rs
crate/flow_rt/: Cargo.toml
crate/flow_rt/src/: flow.rs  item_graph.rs  item_graph_builder.rs  lib.rs
crate/fmt/: Cargo.toml
crate/fmt/src/: either.rs  error.rs  lib.rs  owned_deserialize.rs  presentable.rs  presentable_ext.rs  presentable_list.rs  presenter.rs  result.rs
crate/item_interaction_model/: Cargo.toml
crate/item_interaction_model/src/: item_interactions_example.rs  item_location.rs  item_location_state_in_progress.rs  item_locations_and_interactions.rs  lib.rs
crate/item_model/: Cargo.toml
crate/item_model/src/: item_id.rs  item_interaction.rs  item_interactions_current.rs  item_interactions_current_or_example.rs  item_location.rs  item_location_ancestors.rs  item_location_state.rs  item_location_state_in_progress.rs  item_location_tree.rs  item_location_type.rs  item_locations_and_interactions.rs  item_locations_combined.rs  lib.rs
crate/item_spec_id_macro/: Cargo.toml
crate/item_spec_id_macro/src/: lib.rs
crate/params/: Cargo.toml
crate/params/src/: any_spec_data_type.rs  any_spec_rt.rs  any_spec_rt_boxed.rs  field_name_and_type.rs  field_wise_spec_rt.rs  func.rs  lib.rs  mapping_fn.rs  mapping_fn_id.rs  mapping_fn_impl.rs  mapping_fn_name.rs  mapping_fn_reg.rs  mapping_fn_reg_key.rs  mapping_fns.rs  params.rs  params_fieldless.rs  params_key.rs  params_merge_ext.rs  params_resolve_error.rs  params_spec.rs  params_spec_builder.rs  params_spec_de.rs  params_spec_fieldless.rs  params_spec_fieldless_de.rs  params_spec_rt.rs  params_specs.rs  params_value.rs  std_impl.rs  value.rs  value_fieldless.rs  value_resolution_ctx.rs  value_resolution_mode.rs  value_spec.rs  value_spec_de.rs  value_spec_fieldless.rs  value_spec_fieldless_de.rs  value_spec_rt.rs
crate/params_derive/: Cargo.toml
crate/params_derive/src/: external_type.rs  fields_map.rs  lib.rs  (+20 more)
crate/profile_model/: Cargo.toml
crate/progress_model/: Cargo.toml
crate/resource_model/: Cargo.toml
crate/resource_rt/: Cargo.toml
crate/resources/: Cargo.toml
item_specs/: Cargo.toml
item_specs/blank/: Cargo.toml
item_specs/file_download/: Cargo.toml
item_specs/sh_cmd/: Cargo.toml
item_specs/sh_sync_cmd/: Cargo.toml
item_specs/src/: lib.rs
item_specs/tar_x/: Cargo.toml
items/: Cargo.toml
items/blank/: Cargo.toml
items/file_download/: Cargo.toml
items/sh_cmd/: Cargo.toml
items/sh_sync_cmd/: Cargo.toml
items/src/: lib.rs
items/tar_x/: Cargo.toml
workspace_tests/: Cargo.toml
workspace_tests/src/: cfg.rs  cli.rs  cmd_ctx.rs  cmd_model.rs  cmd_rt.rs  data.rs  diff.rs  flow_model.rs  fmt.rs  fn_invocation.rs  fn_name.rs  fn_tracker_output.rs  fn_tracker_presenter.rs  item_interaction_model.rs  item_model.rs  item_specs.rs  items.rs  lib.rs  mock_item.rs  no_op_output.rs  params.rs  peace_cmd_ctx_type_params.rs  peace_cmd_ctx_types.rs  peace_test_error.rs  profile_model.rs  resource_model.rs  resource_rt.rs  resources.rs  rt.rs  rt_logic.rs  rt_model.rs  state_rt.rs  test_support.rs  vec_copy_full_spec.rs  vec_copy_item.rs  vec_copy_item_spec.rs  vec_copy_step.rs
(+1907 files in other folders)
