[package]
name = "peace"
description = "zero stress automation"
documentation = "https://docs.rs/peace/"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lib]
doctest = true
test = false
crate-type = ["cdylib", "rlib"]

[dependencies]
miette = { workspace = true, optional = true }
peace_cfg = { workspace = true }
peace_cli = { workspace = true, optional = true }
peace_cli_model = { workspace = true, optional = true }
peace_cmd = { workspace = true }
peace_cmd_model = { workspace = true }
peace_cmd_rt = { workspace = true }
peace_data = { workspace = true }
peace_diff = { workspace = true }
peace_fmt = { workspace = true }
peace_params = { workspace = true }
peace_resources = { workspace = true }
peace_rt = { workspace = true }
peace_rt_model = { workspace = true }
peace_webi = { workspace = true, optional = true }

[features]
default = []
cli = [
    "dep:peace_cli",
    "dep:peace_cli_model",
]
webi = [
    "dep:peace_webi",
]
error_reporting = [
    "dep:miette",
    "miette?/fancy",
    "peace_cmd_model/error_reporting",
    "peace_cmd_rt/error_reporting",
    "peace_params/error_reporting",
    "peace_rt/error_reporting",
    "peace_rt_model/error_reporting",
]
output_in_memory = ["peace_cli?/output_in_memory"]
output_progress = [
    "peace_cli?/output_progress",
    "peace_cmd_rt/output_progress",
    "peace_cfg/output_progress",
    "peace_rt/output_progress",
    "peace_rt_model/output_progress",
]

[workspace]
members = [
    "crate/*",
    "items",
    "workspace_tests",
    "examples/*",
]

[workspace.package]
version = "0.0.13"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2021"
homepage = "https://peace.mk"
repository = "https://github.com/azriel91/peace"
readme = "README.md"
categories = ["asynchronous", "config"]
keywords = ["automation"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Peace crates.
peace = { path = ".", version = "0.0.13", default-features = false }

peace_cfg = { path = "crate/cfg", version = "0.0.13" }
peace_cli = { path = "crate/cli", version = "0.0.13" }
peace_cli_model = { path = "crate/cli_model", version = "0.0.13" }
peace_cmd = { path = "crate/cmd", version = "0.0.13" }
peace_cmd_model = { path = "crate/cmd_model", version = "0.0.13" }
peace_cmd_rt = { path = "crate/cmd_rt", version = "0.0.13" }
peace_code_gen = { path = "crate/code_gen", version = "0.0.13" }
peace_core = { path = "crate/core", version = "0.0.13" }
peace_data = { path = "crate/data", version = "0.0.13" }
peace_data_derive = { path = "crate/data_derive", version = "0.0.13" }
peace_diff = { path = "crate/diff", version = "0.0.13" }
peace_fmt = { path = "crate/fmt", version = "0.0.13" }
peace_params = { path = "crate/params", version = "0.0.13" }
peace_params_derive = { path = "crate/params_derive", version = "0.0.13" }
peace_resources = { path = "crate/resources", version = "0.0.13" }
peace_rt = { path = "crate/rt", version = "0.0.13" }
peace_rt_model = { path = "crate/rt_model", version = "0.0.13" }
peace_rt_model_core = { path = "crate/rt_model_core", version = "0.0.13" }
peace_rt_model_hack = { path = "crate/rt_model_hack", version = "0.0.13" }
peace_rt_model_native = { path = "crate/rt_model_native", version = "0.0.13" }
peace_rt_model_web = { path = "crate/rt_model_web", version = "0.0.13" }
peace_static_check_macros = { path = "crate/static_check_macros", version = "0.0.13" }
peace_value_traits = { path = "crate/value_traits", version = "0.0.13" }
peace_webi = { path = "crate/webi", version = "0.0.13" }

# Item crates
peace_items = { path = "items", version = "0.0.13" }

peace_item_blank = { path = "items/blank", version = "0.0.13" }
peace_item_file_download = { path = "items/file_download", version = "0.0.13" }
peace_item_sh_cmd = { path = "items/sh_cmd", version = "0.0.13" }
peace_item_tar_x = { path = "items/tar_x", version = "0.0.13" }

# Dependencies used by framework and item crates.
#
# This does not include examples' dependencies, because we want it to be easy for
# developers to see the dependencies to create an automation tool.
async-trait = "0.1.77"
axum = "0.7.4"
base64 = "0.21.7"
bytes = "1.5.0"
cfg-if = "1.0.0"
chrono = { version = "0.4.33", default-features = false, features = ["clock", "serde"] }
console = "0.15.8"
derivative = "2.2.0"
diff-struct = "0.5.3"
downcast-rs = "1.2.0"
dyn-clone = "1.0.16"
enser = "0.1.4"
erased-serde = "0.4.2"
fn_graph = { version = "0.12.0", features = ["async", "interruptible", "resman"] }
futures = "0.3.30"
heck = "0.4.1"
indexmap = "2.1.0"
indicatif = "0.17.7"
interruptible = "0.2.1"
leptos = { version = "0.6" }
leptos_axum = "0.6"
leptos_meta = { version = "0.6" }
leptos_router = { version = "0.6" }
libc = "0.2.152"
miette = "5.10.0"
pretty_assertions = "1.4.0"
proc-macro2 = "1.0.78"
quote = "1.0.35"
raw_tty = "0.1.0"
reqwest = "0.11.23"
resman = "0.17.0"
serde = "1.0.196"
serde-wasm-bindgen = "0.6.3"
serde_json = "1.0.112"
serde_yaml = "0.9.30"
syn = "2.0.48"
tar = "0.4.40"
tempfile = "3.9.0"
thiserror = "1.0.56"
tokio = "1.35.1"
tokio-util = "0.7.10"
tower-http = "0.5.1"
tynm = "0.1.9"
type_reg = { version = "0.7.0", features = ["debug", "untagged", "ordered"] }
url = "2.5.0"
wasm-bindgen = "0.2.90"
web-sys = "0.3.67"
