[package]
name = "peace"
description = "zero stress automation"
documentation = "https://docs.rs/peace/"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
doctest = true
test = false
crate-type = ["cdylib", "rlib"]

[dependencies]
miette = { workspace = true, optional = true }
peace_cfg = { workspace = true }
peace_cli = { workspace = true, optional = true }
peace_cli_model = { workspace = true, optional = true }
peace_cmd = { workspace = true }
peace_cmd_model = { workspace = true }
peace_cmd_rt = { workspace = true }
peace_data = { workspace = true }
peace_diff = { workspace = true }
peace_flow_model = { workspace = true }
peace_flow_rt = { workspace = true }
peace_fmt = { workspace = true }
peace_item_interaction_model = { workspace = true, optional = true }
peace_item_model = { workspace = true }
peace_params = { workspace = true }
peace_profile_model = { workspace = true }
peace_progress_model = { workspace = true, optional = true }
peace_resource_rt = { workspace = true }
peace_rt = { workspace = true }
peace_rt_model = { workspace = true }
peace_state_rt = { workspace = true }
peace_webi = { workspace = true, optional = true }
peace_webi_components = { workspace = true, optional = true }
peace_webi_model = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
miette = { workspace = true, optional = true, features = ["fancy"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
miette = { workspace = true, optional = true, features = ["fancy-no-syscall"] }

[features]
default = []
cli = [
    "dep:peace_cli",
    "dep:peace_cli_model",
]
webi = [
    "dep:peace_webi",
    "dep:peace_webi_components",
    "dep:peace_webi_model",
]
error_reporting = [
    "dep:miette",
    "peace_cmd_model/error_reporting",
    "peace_cmd_rt/error_reporting",
    "peace_params/error_reporting",
    "peace_rt/error_reporting",
    "peace_rt_model/error_reporting",
    "peace_webi_model?/error_reporting",
]
output_in_memory = ["peace_cli?/output_in_memory"]
output_progress = [
    "dep:peace_progress_model",
    "peace_cli?/output_progress",
    "peace_cmd_rt/output_progress",
    "peace_cfg/output_progress",
    "peace_flow_rt/output_progress",
    "peace_item_interaction_model/output_progress",
    "peace_rt/output_progress",
    "peace_rt_model/output_progress",
    "peace_webi?/output_progress",
    "peace_cmd_model/output_progress",
]
item_interactions = [
    "dep:peace_item_interaction_model",
    "peace_cfg/item_interactions",
    "peace_flow_rt/item_interactions",
    "peace_webi?/item_interactions",
    "peace_webi_components?/item_interactions",
]
item_state_example = [
    "peace_cfg/item_state_example",
    "peace_cmd/item_state_example",
    "peace_data/item_state_example",
    "peace_flow_rt/item_state_example",
    "peace_params/item_state_example",
    "peace_rt_model/item_state_example",
    "peace_webi?/item_state_example",
    "peace_webi_components?/item_state_example",
]
ssr = [
    "peace_webi?/ssr",
    "peace_webi_components?/ssr",
]

[workspace]
members = [
    "crate/*",
    "items",
    "workspace_tests",
    "examples/*",
]

[workspace.package]
version = "0.0.14"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2021"
homepage = "https://peace.mk"
repository = "https://github.com/azriel91/peace"
readme = "README.md"
categories = ["asynchronous", "config"]
keywords = ["automation"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Peace crates.
peace = { path = ".", version = "0.0.14", default-features = false }

peace_cfg = { path = "crate/cfg", version = "0.0.14" }
peace_cli = { path = "crate/cli", version = "0.0.14" }
peace_cli_model = { path = "crate/cli_model", version = "0.0.14" }
peace_cmd = { path = "crate/cmd", version = "0.0.14" }
peace_cmd_model = { path = "crate/cmd_model", version = "0.0.14" }
peace_cmd_rt = { path = "crate/cmd_rt", version = "0.0.14" }
peace_code_gen = { path = "crate/code_gen", version = "0.0.14" }
peace_core = { path = "crate/core", version = "0.0.14" }
peace_data = { path = "crate/data", version = "0.0.14" }
peace_data_derive = { path = "crate/data_derive", version = "0.0.14" }
peace_diff = { path = "crate/diff", version = "0.0.14" }
peace_flow_model = { path = "crate/flow_model", version = "0.0.14" }
peace_flow_rt = { path = "crate/flow_rt", version = "0.0.14" }
peace_fmt = { path = "crate/fmt", version = "0.0.14" }
peace_item_interaction_model = { path = "crate/item_interaction_model", version = "0.0.14" }
peace_item_model = { path = "crate/item_model", version = "0.0.14" }
peace_params = { path = "crate/params", version = "0.0.14" }
peace_params_derive = { path = "crate/params_derive", version = "0.0.14" }
peace_profile_model = { path = "crate/profile_model", version = "0.0.14" }
peace_progress_model = { path = "crate/progress_model", version = "0.0.14" }
peace_resource_rt = { path = "crate/resource_rt", version = "0.0.14" }
peace_rt = { path = "crate/rt", version = "0.0.14" }
peace_rt_model = { path = "crate/rt_model", version = "0.0.14" }
peace_rt_model_core = { path = "crate/rt_model_core", version = "0.0.14" }
peace_rt_model_hack = { path = "crate/rt_model_hack", version = "0.0.14" }
peace_rt_model_native = { path = "crate/rt_model_native", version = "0.0.14" }
peace_rt_model_web = { path = "crate/rt_model_web", version = "0.0.14" }
peace_state_rt = { path = "crate/state_rt", version = "0.0.14" }
peace_static_check_macros = { path = "crate/static_check_macros", version = "0.0.14" }
peace_value_traits = { path = "crate/value_traits", version = "0.0.14" }
peace_webi = { path = "crate/webi", version = "0.0.14" }
peace_webi_components = { path = "crate/webi_components", version = "0.0.14" }
peace_webi_model = { path = "crate/webi_model", version = "0.0.14" }
peace_webi_output = { path = "crate/webi_output", version = "0.0.14" }

# Item crates
peace_items = { path = "items", version = "0.0.14" }

peace_item_blank = { path = "items/blank", version = "0.0.14" }
peace_item_file_download = { path = "items/file_download", version = "0.0.14" }
peace_item_sh_cmd = { path = "items/sh_cmd", version = "0.0.14" }
peace_item_tar_x = { path = "items/tar_x", version = "0.0.14" }

# Dependencies used by framework and item crates.
#
# This does not include examples' dependencies, because we want it to be easy for
# developers to see the dependencies to create an automation tool.
async-trait = "0.1.85"
axum = "0.7.9"
base64 = "0.22.1"
bytes = "1.9.0"
cfg-if = "1.0.0"
chrono = { version = "0.4.39", default-features = false, features = ["clock", "serde"] }
console = "0.15.10"
derivative = "2.2.0"
diff-struct = "0.5.3"
dot_ix = { version = "0.9.2", default-features = false }
dot_ix_model = "0.9.2"
downcast-rs = "2.0.1"
dyn-clone = "1.0.17"
enser = "0.1.4"
erased-serde = "0.4.5"
fn_graph = { version = "0.15.0", features = ["async", "graph_info", "interruptible", "resman"] }
futures = "0.3.31"
gloo-timers = "0.3.0"
heck = "0.5.0"
id_newtype = "0.1.0"
indexmap = "2.7.1"
indicatif = "0.17.9"
interruptible = "0.2.4"
leptos = { version = "0.7" }
leptos_axum = "0.7"
leptos_config = "0.7"
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7" }
libc = "0.2.169"
miette = "7.4.0"
own = "0.1.3"
pretty_assertions = "1.4.1"
proc-macro2 = "1.0.93"
quote = "1.0.38"
raw_tty = "0.1.0"
reqwest = "0.12.12"
resman = "0.18.0"
serde = "1.0.217"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.137"
serde_yaml = "0.9.34"
smallvec = "1.13.2"
syn = "2.0.96"
tar = "0.4.43"
tempfile = "3.15.0"
thiserror = "2.0.11"
tokio = "1.43"
tokio-util = "0.7.13"
tower-http = "0.6.2"
tynm = "0.1.10"
type_reg = { version = "0.8.0", features = ["debug", "untagged", "ordered"] }
url = "2.5.4"
wasm-bindgen = "0.2.100"
web-sys = "0.3.77"
yaml_error_context_hack = "0.1.0"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
