[package]
name = "peace_items"
description = "Collection of items the peace framework"
documentation = "https://docs.rs/peace_items/"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[package.metadata.docs.rs]
all-features = true

[lib]
doctest = true
test = false

[dependencies]
peace_item_blank = { workspace = true, optional = true }
peace_item_file_download = { workspace = true, optional = true }
peace_item_sh_cmd = { workspace = true, optional = true }
peace_item_sh_sync_cmd = { workspace = true, optional = true }
peace_item_tar_x = { workspace = true, optional = true }

[dev-dependencies]
peace = { workspace = true, default-features = false }

[features]
default = []

# `peace` features
error_reporting = [
    "peace/error_reporting",
    "peace_item_blank?/error_reporting",
    "peace_item_file_download?/error_reporting",
    "peace_item_sh_cmd?/error_reporting",
    "peace_item_sh_sync_cmd?/error_reporting",
    "peace_item_tar_x?/error_reporting",
]
output_colorized = ["peace/output_colorized"]
output_json = ["peace/output_json"]
output_progress = [
    "peace/output_progress",
    "peace_item_blank?/output_progress",
    "peace_item_file_download?/output_progress",
    "peace_item_sh_cmd?/output_progress",
    "peace_item_sh_sync_cmd?/output_progress",
    "peace_item_tar_x?/output_progress",
]

# Subcrates
blank = ["dep:peace_item_blank"]
file_download = ["dep:peace_item_file_download"]
sh_cmd = ["dep:peace_item_sh_cmd"]
sh_sync_cmd = ["dep:peace_item_sh_sync_cmd"]
tar_x = ["dep:peace_item_tar_x"]
