[package]
name = "workspace_tests"
version = "0.0.9"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2021"
description = "Tests for the peace automation library."
repository = "https://github.com/azriel91/peace"
documentation = "https://docs.rs/peace/"
readme = "../README.md"
categories = ["asynchronous", "config"]
keywords = ["automation"]
license = "MIT OR Apache-2.0"
publish = false

[lib]
doctest = false
test = true

[dev-dependencies]
cfg-if = { workspace = true }
console = "0.15.5"
diff-struct = "0.5.1"
derivative = { workspace = true }
futures = "0.3.28"
peace = { path = "..", version = "0.0.9", default-features = false }
peace_items = { path = "../items", version = "0.0.9" }
pretty_assertions = "1.3.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
serde_yaml = "0.9.21"
tar = { workspace = true }
tempfile = "3.5.0"
thiserror = "1.0.40"
tokio = { workspace = true, features = ["rt", "macros"] }
tynm = { workspace = true }

[features]
default = ["items", "output_in_memory"]

# `peace` features
error_reporting = ["peace/error_reporting"]
output_colorized = ["peace/output_colorized"]
output_in_memory = ["peace/output_in_memory"]
output_json = ["peace/output_json"]
output_progress = ["peace/output_progress", "peace_items/output_progress"]

# `peace_items` features
items = [
    "peace_items/blank",
    "peace_items/file_download",
    "peace_items/sh_cmd",
    "peace_items/sh_sync_cmd",
    "peace_items/tar_x",
]
