[package]
name = "workspace_tests"
description = "Tests for the peace automation library."
documentation = "https://docs.rs/peace/"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
publish = false

[lib]
doctest = false
test = true

[dev-dependencies]
cfg-if = { workspace = true }
console = { workspace = true }
diff-struct = { workspace = true }
derivative = { workspace = true }
futures = { workspace = true }
peace = { workspace = true, default-features = false, features = ["cli"] }
# `ItemWrapper` always needs the `blank` item spec to be present.
peace_items = { workspace = true, features = ["blank"] }
pretty_assertions = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
tynm = { workspace = true }

[features]
default = ["items", "output_in_memory"]

# `peace` features
error_reporting = ["peace/error_reporting"]
output_in_memory = ["peace/output_in_memory"]
output_progress = ["peace/output_progress", "peace_items/output_progress"]

# `peace_items` features
items = [
    "peace_items/blank",
    "peace_items/file_download",
    "peace_items/sh_cmd",
    "peace_items/tar_x",
]
