[package]
name = "peace_cfg"
description = "Configuration model for the peace automation framework."
documentation = "https://docs.rs/peace_cfg/"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lib]
doctest = false
test = false

[dependencies]
async-trait = "0.1.68"
dyn-clone = "1.0.11"
enser = "0.1.3"
peace_core = { path = "../core", version = "0.0.10" }
peace_data = { path = "../data", version = "0.0.10" }
peace_params = { path = "../params", version = "0.0.10" }
peace_resources = { path = "../resources", version = "0.0.10" }
serde = { version = "1.0.159", features = ["derive"] }
tynm = { workspace = true }

[features]
default = []
error_reporting = ["peace_params/error_reporting"]
output_progress = ["peace_core/output_progress"]
