[package]
name = "peace_cfg"
description = "Configuration model for the peace automation framework."
documentation = "https://docs.rs/peace_cfg/"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
doctest = false
test = false

[dependencies]
async-trait = { workspace = true }
dyn-clone = { workspace = true }
enser = { workspace = true }
peace_core = { workspace = true }
peace_data = { workspace = true }
peace_params = { workspace = true }
peace_resource_rt = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tynm = { workspace = true }

[features]
default = []
error_reporting = ["peace_params/error_reporting"]
output_progress = ["peace_core/output_progress"]
