[package]
name = "peace_cfg"
description = "Configuration model for the peace automation framework."
documentation = "https://docs.rs/peace_cfg/"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
doctest = false
test = false

[dependencies]
async-trait = { workspace = true }
dyn-clone = { workspace = true }
enser = { workspace = true }
peace_core = { workspace = true }
peace_data = { workspace = true }
peace_item_interaction_model = { workspace = true, optional = true }
peace_item_model = { workspace = true }
peace_params = { workspace = true }
peace_progress_model = { workspace = true, optional = true }
peace_resource_rt = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tynm = { workspace = true }

[features]
default = []
error_reporting = ["peace_params/error_reporting"]
output_progress = [
    "dep:peace_item_interaction_model",
    "dep:peace_progress_model",
    "peace_item_interaction_model/output_progress",
]
item_interactions = ["dep:peace_item_interaction_model"]
item_state_example = []
