[package]
name = "peace_cmd"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
version = "0.0.10"
edition = "2021"
description = "Command structure for the Peace framework."
repository = "https://github.com/azriel91/peace"
documentation = "https://docs.rs/peace_cmd/"
readme = "../../README.md"
categories = ["asynchronous", "config"]
keywords = ["automation"]
license = "MIT OR Apache-2.0"

[lib]
doctest = false
test = false

[dependencies]
futures = "0.3.28"
indicatif = { workspace = true, optional = true, features = ["tokio"] }
peace_cfg = { path = "../cfg", version = "0.0.10" }
peace_code_gen = { path = "../code_gen", version = "0.0.10" }
peace_core = { path = "../core", version = "0.0.10" }
peace_params = { path = "../params", version = "0.0.10" }
peace_resources = { path = "../resources", version = "0.0.10" }
peace_rt_model = { path = "../rt_model", version = "0.0.10" }
serde = { version = "1.0.159" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["fs"] }

[features]
default = []
output_progress = [
    "dep:indicatif",
    "peace_core/output_progress",
    "peace_rt_model/output_progress",
]
