[package]
name = "peace_cmd"
description = "Command structure for the Peace framework."
documentation = "https://docs.rs/peace_cmd/"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lib]
doctest = false
test = false

[dependencies]
futures = "0.3.28"
indicatif = { workspace = true, optional = true, features = ["tokio"] }
peace_cfg = { path = "../cfg", version = "0.0.10" }
peace_code_gen = { path = "../code_gen", version = "0.0.10" }
peace_core = { path = "../core", version = "0.0.10" }
peace_params = { path = "../params", version = "0.0.10" }
peace_resources = { path = "../resources", version = "0.0.10" }
peace_rt_model = { path = "../rt_model", version = "0.0.10" }
serde = { version = "1.0.159" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["fs"] }

[features]
default = []
output_progress = [
    "dep:indicatif",
    "peace_core/output_progress",
    "peace_rt_model/output_progress",
]
