[package]
name = "peace_cmd"
description = "Command structure for the Peace framework."
documentation = "https://docs.rs/peace_cmd/"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
doctest = false
test = false

[dependencies]
cfg-if = { workspace = true }
futures = { workspace = true }
indicatif = { workspace = true, optional = true, features = ["tokio"] }
interruptible = { workspace = true, features = ["stream"] }
own = { workspace = true }
peace_cfg = { workspace = true }
peace_code_gen = { workspace = true }
peace_core = { workspace = true }
peace_flow_rt = { workspace = true }
peace_item_model = { workspace = true }
peace_params = { workspace = true }
peace_profile_model = { workspace = true }
peace_progress_model = { workspace = true, optional = true }
peace_resource_rt = { workspace = true }
peace_rt_model = { workspace = true }
peace_state_rt = { workspace = true }
peace_value_traits = { workspace = true }
serde = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["fs"] }

[features]
default = []
item_state_example = [
    "peace_cfg/item_state_example",
    "peace_flow_rt/item_state_example",
    "peace_rt_model/item_state_example",
    "peace_params/item_state_example",
]
output_progress = [
    "dep:indicatif",
    "dep:peace_progress_model",
    "peace_flow_rt/output_progress",
    "peace_rt_model/output_progress",
]
