[package]
name = "peace_cmd_ctx"
description = "Information such as which profile or flow a command is run for for the Peace framework."
documentation = "https://docs.rs/peace_cmd_ctx/"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
doctest = false
test = false

[dependencies]
interruptible = { workspace = true }
own = { workspace = true }
peace_flow_rt = { workspace = true }
peace_params = { workspace = true }
peace_profile_model = { workspace = true }
peace_resource_rt = { workspace = true }
peace_rt_model = { workspace = true }
peace_rt_model_core = { workspace = true }
type_reg = { workspace = true }
typed-builder = { workspace = true }

[features]
default = []
output_progress = [
    "peace_flow_rt/output_progress",
    "peace_rt_model/output_progress",
    "peace_rt_model_core/output_progress",
]
